Adjust spacing issues and change font size to something slightly larger

--- a/css/styles.css
+++ b/css/styles.css
@@ -67,7 +67,6 @@ h2,
 h3 {
   font-family: var(--dawntreader-ff);
   line-height: 1.3;
-  /* font-size: 1.5em; */
   text-align: center;
   padding: 0.5rem 0;
 }
@@ -118,19 +117,42 @@ p {
     max-width: 720px;
   }
 
-  & .square3 {
-    order: 4;
-  }
-
   & p {
     text-align: center;
+    font-size: 1.15rem;
   }
+}
+
+.square3 {
+  order: 4;
+
+  & > :nth-child(1) {
+    margin-bottom: 3.5rem;
+  }
+}
+
+.square4 div:not(:last-child) {
+  margin-bottom: 1.5rem;
+}
+
+.square3 > div,
+.square4 > div {
+  width: 90%;
+  max-width: 720px;
 }
 
 .square1 {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
+}
+
+.square3,
+.square4 {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
   align-items: center;
 }
 
@@ -164,7 +186,8 @@ p {
    */
 
   .fc-member-info {
-    --square-height: 250px;
+    --square-height: 320px;
+    --member-info-dimensions: 720px;
 
     display: grid;
     grid-template-columns: 1fr 1.2fr;
@@ -172,8 +195,8 @@ p {
     align-items: normal;
     padding: 0;
     gap: 0.5rem;
-    max-width: 600px;
-    height: 600px;
+    max-width: var(--member-info-dimensions);
+    height: var(--member-info-dimensions);
   }
 
   .square {
